{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 71,
  "lineage": "04b4b963-f9c3-4080-8e97-f241c32c6b0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05de0b8b19b0ca04f",
            "domain": "vpc",
            "id": "eipalloc-05de0b8b19b0ca04f",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-54-206-185-190.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "54.206.185.190",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "tech-test"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6aa0cbf9901e890",
            "domain": "vpc",
            "id": "eipalloc-0a6aa0cbf9901e890",
            "network_border_group": "ap-southeast-2",
            "public_dns": "ec2-52-62-194-146.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.62.194.146",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "tech-test"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:919545427229:internet-gateway/igw-0b7027401ec4ca8af",
            "id": "igw-0b7027401ec4ca8af",
            "owner_id": "919545427229",
            "tags_all": {
              "Name": "tech-test"
            },
            "vpc_id": "vpc-08de9825e44feacf0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs-prod-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:919545427229:loadbalancer/app/ecs-prod-lb/50978957e5d06509",
            "arn_suffix": "app/ecs-prod-lb/50978957e5d06509",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-prod-lb-591844507.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:919545427229:loadbalancer/app/ecs-prod-lb/50978957e5d06509",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-prod-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-023e8c616ea55c63a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0699ef52687d1666b"
              },
              {
                "subnet_id": "subnet-0c3320a6c12353ff8"
              }
            ],
            "subnets": [
              "subnet-0699ef52687d1666b",
              "subnet-0c3320a6c12353ff8"
            ],
            "tags_all": {
              "Name": "tech-test"
            },
            "vpc_id": "vpc-08de9825e44feacf0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "python_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:919545427229:listener/app/ecs-prod-lb/50978957e5d06509/0008fc016ef0c628",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:919545427229:targetgroup/ecs-prod-target-group/44455ae8ded5d774",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:919545427229:listener/app/ecs-prod-lb/50978957e5d06509/0008fc016ef0c628",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:919545427229:loadbalancer/app/ecs-prod-lb/50978957e5d06509",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Name": "tech-test"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs-prod-lb",
            "aws_lb_target_group.ecs-prod-target-group",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs-prod-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:919545427229:targetgroup/ecs-prod-target-group/44455ae8ded5d774",
            "arn_suffix": "targetgroup/ecs-prod-target-group/44455ae8ded5d774",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:919545427229:targetgroup/ecs-prod-target-group/44455ae8ded5d774",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-prod-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Name": "tech-test"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08de9825e44feacf0"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05de0b8b19b0ca04f",
            "association_id": "eipassoc-026e49c0db51ae2a1",
            "connectivity_type": "public",
            "id": "nat-0d9cd4c1ed753143d",
            "network_interface_id": "eni-026901a237e14aeb8",
            "private_ip": "10.32.2.101",
            "public_ip": "54.206.185.190",
            "subnet_id": "subnet-0c3320a6c12353ff8",
            "tags_all": {
              "Name": "tech-test"
            }
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6aa0cbf9901e890",
            "association_id": "eipassoc-0659409a5ac01f8ef",
            "connectivity_type": "public",
            "id": "nat-03e7635cbf6cef721",
            "network_interface_id": "eni-0c54a19d1a85805c1",
            "private_ip": "10.32.3.176",
            "public_ip": "52.62.194.146",
            "subnet_id": "subnet-0699ef52687d1666b",
            "tags_all": {
              "Name": "tech-test"
            }
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b7027401ec4ca8af",
            "id": "r-rtb-04d8335e578ce9e2c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d8335e578ce9e2c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:919545427229:route-table/rtb-02ba3f79cfd2f7113",
            "id": "rtb-02ba3f79cfd2f7113",
            "owner_id": "919545427229",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d9cd4c1ed753143d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Name": "tech-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-08de9825e44feacf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:919545427229:route-table/rtb-0862eb3bd505538ba",
            "id": "rtb-0862eb3bd505538ba",
            "owner_id": "919545427229",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03e7635cbf6cef721",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "Name": "tech-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-08de9825e44feacf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d7c9eda7c3be9ac7",
            "route_table_id": "rtb-02ba3f79cfd2f7113",
            "subnet_id": "subnet-02d61519d9476c95b"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0201b7895bff21111",
            "route_table_id": "rtb-0862eb3bd505538ba",
            "subnet_id": "subnet-058d5ea183cbff557"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:919545427229:security-group/sg-023e8c616ea55c63a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023e8c616ea55c63a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-alb-security-group",
            "name_prefix": "",
            "owner_id": "919545427229",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Name": "tech-test"
            },
            "timeouts": null,
            "vpc_id": "vpc-08de9825e44feacf0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:919545427229:subnet/subnet-02d61519d9476c95b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.32.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d61519d9476c95b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919545427229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "tech-test"
            },
            "vpc_id": "vpc-08de9825e44feacf0"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:919545427229:subnet/subnet-058d5ea183cbff557",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058d5ea183cbff557",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919545427229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "tech-test"
            },
            "vpc_id": "vpc-08de9825e44feacf0"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:919545427229:subnet/subnet-0c3320a6c12353ff8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3320a6c12353ff8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "919545427229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "tech-test"
            },
            "vpc_id": "vpc-08de9825e44feacf0"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:919545427229:subnet/subnet-0699ef52687d1666b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0699ef52687d1666b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "919545427229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "tech-test"
            },
            "vpc_id": "vpc-08de9825e44feacf0"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:919545427229:vpc/vpc-08de9825e44feacf0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-0f2e9d0e6036c7707",
            "default_route_table_id": "rtb-04d8335e578ce9e2c",
            "default_security_group_id": "sg-03f3591222cf17601",
            "dhcp_options_id": "dopt-0379cf35570329fea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08de9825e44feacf0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d8335e578ce9e2c",
            "owner_id": "919545427229",
            "tags_all": {
              "Name": "tech-test"
            }
          }
        }
      ]
    }
  ]
}